# DeckAPI

./: .gitignore  Card.json  README.md  _phantasm.ydk  _sucata.ydk  _traptrix.ydk  _vazio.ydk  blue_eyes.ydk  decklist.txt  min.ods  pag.txt  pyproject.toml  requirements.txt  ydke.txt
arquetypes/: arquetipos.txt  letra_a.txt  letra_b.txt  letra_c.txt  letra_d.txt  letra_e.txt  letra_f.txt  letra_g.txt  letra_h.txt  letra_i.txt  letra_j.txt  letra_k.txt  letra_l.txt  letra_m.txt  letra_n.txt  letra_o.txt  letra_p.txt  letra_q.txt  letra_r.txt  letra_s.txt  letra_t.txt  letra_u.txt  letra_v.txt  letra_w.txt  letra_x.txt  letra_y.txt  letra_z.txt  min_arquetype.txt
arquetypes/A/: A.I..txt  Abyss Actor.txt  Abyss Script.txt  Abyss-.txt  Abyss.txt  Adamancipator.txt  Advanced Crystal Beast.txt  Aesir.txt  Aether.txt  Alien.txt  Allure Queen.txt  Ally of Justice.txt  Altergeist.txt  Amazement.txt  Amazoness.txt  Amorphage.txt  Ancient Gear.txt  Ancient Warriors.txt  Apoqliphort.txt  Appliancer.txt  Aqua.txt  Aquaactress.txt  Aquamirror.txt  Aquarium.txt  Arcana Force.txt  Archfiend.txt  Armed Dragon.txt  Armor Ninja.txt  Aroma.txt  Artifact.txt  Artorigus.txt  Assault Blackwing.txt  Assault Mode.txt  Atlantean.txt  Attraction.txt  Azamina.txt
arquetypes/B/: B.E.S..txt  Bamboo Sword.txt  Barbaros.txt  Barian's.txt  Barian.txt  Batteryman.txt  Battleguard.txt  Battlewasp.txt  Battlin Boxing.txt  Battlin' Boxer.txt  Beast's Battle.txt  Beetrooper.txt  Black Luster Soldier.txt  Blackwing Tamer.txt  Blackwing.txt  Blaze Accelerator.txt  Blue-Eyes.txt  Bonding -.txt  Borrel.txt  Bounzer.txt  Branded.txt  Burning Abyss.txt  Buster Blader.txt  Butterspy.txt  Bystial.txt
arquetypes/C/: CXyz.txt  Celtic Guard.txt  Centur-Ion.txt  Change.txt  Chaos.txt  Charmer.txt  Chemicritter.txt  Chronomaly.txt  Chrysalis.txt  Cipher.txt  Clear Wing.txt  Cloudian.txt  Code Talker.txt  Codebreaker.txt  Constellar.txt  Counter.txt  Crusadia.txt  (+11 more)
decks/: _dogmatica.ydk  _resonator.ydk
src/: __init__.py  app.py  ban.py  base.py  card.py  code.py  deck.py  deckapi.py  mesa.py  mochila.py  mount.py  scrap.py  ydke.py
test/: __init__.py  test_ban.py  test_card.py  test_deck.py  test_mesa.py  test_ydke.py
(+435 files in other folders)
