[tool.poetry]
name = "deckapi"
version = "0.1.0"
description = ""
authors = ["ErickNoGit <onemylinux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "4.6.0"
asttokens = "2.4.1"
attrs = "24.2.0"
automat = "24.8.1"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
comm = "0.2.2"
constantly = "23.10.4"
contourpy = "1.3.0"
cycler = "0.12.1"
debugpy = "1.8.6"
decorator = "5.1.1"
et-xmlfile = "1.1.0"
executing = "2.1.0"
fonttools = "4.54.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
hyperlink = "21.0.0"
idna = "3.10"
incremental = "24.7.2"
iniconfig = "2.0.0"
ipykernel = "6.29.5"
ipython = "8.28.0"
jedi = "0.19.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "2.1.1"
ollama = "0.3.3"
openpyxl = "3.1.5"
outcome = "1.3.0.post0"
packaging = "24.1"
pandas = "2.2.3"
pandas-stubs = "2.2.2.240909"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
prompt-toolkit = "3.0.48"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pyparsing = "3.1.4"
pysocks = "1.7.1"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-tornasync = "0.6.0.post2"
pytest-trio = "0.8.0"
pytest-twisted = "1.14.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyzmq = "26.2.0"
requests = "2.32.3"
selenium = "4.25.0"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.6"
stack-data = "0.6.3"
tornado = "6.4.2"
traitlets = "5.14.3"
trio = "0.26.2"
trio-websocket = "0.11.1"
twisted = "24.7.0"
types-beautifulsoup4 = "4.12.0.20240907"
types-html5lib = "1.1.11.20240806"
types-pytz = "2024.2.0.20240913"
types-requests = "2.32.0.20240914"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
wcwidth = "0.2.13"
webdriver-manager = "4.0.2"
websocket-client = "1.8.0"
wsproto = "1.2.0"
zope-interface = "7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
